Update build settings; btwxt.

--- a/libtk205/test/CMakeLists.txt
+++ b/libtk205/test/CMakeLists.txt
@@ -1,13 +1,5 @@
 # Test Executable
 
-include_directories(${PROJECT_SOURCE_DIR}/vendor/json/single_include)
-include_directories(${PROJECT_SOURCE_DIR}/vendor/json/include)
-
-include_directories(${PROJECT_SOURCE_DIR}/include)
-include_directories(${PROJECT_SOURCE_DIR}/../schema-205/build/include)
-include_directories(${PROJECT_SOURCE_DIR}/../schema-205/schema205/src) # rs_instance_factory/base
-include_directories(${gtest_SOURCE_DIR}/include)
-
 include(GoogleTest)
 
 set (SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/fixtures_libtk205.hpp
@@ -15,10 +7,15 @@ set (SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/fixtures_libtk205.hpp
              ${PROJECT_SOURCE_DIR}/../schema-205/schema205/src/rs_instance_factory.h
              ${PROJECT_SOURCE_DIR}/../schema-205/schema205/src/rs_instance_factory.cpp)
 
-#Does the following command do anything?
-set_source_files_properties(${SOURCES} PROPERTIES GENERATED TRUE)
+set_source_files_properties(${SOURCES} PROPERTIES GENERATED TRUE) #TODO: Check if GENERATED property is used
 
 add_executable(libtk205_tests ${SOURCES})
-target_link_libraries(libtk205_tests libtk205 btwxt gtest gmock)
+target_include_directories(libtk205_tests PRIVATE 
+                           ${PROJECT_SOURCE_DIR}/include 
+                           ${PROJECT_SOURCE_DIR}/../schema-205/build/include 
+                           ${PROJECT_SOURCE_DIR}/../schema-205/schema205/src 
+                           ${gtest_SOURCE_DIR}/include)
+target_link_libraries(libtk205_tests libtk205 btwxt nlohmann_json gtest gmock)
 
 gtest_discover_tests(libtk205_tests TEST_PREFIX libtk205:)
+                                                                                                                                                                                                                                       
