Start reorganizing the build files for libtk205.

--- a/libtk205/CMakeLists.txt
+++ b/libtk205/CMakeLists.txt
@@ -5,14 +5,6 @@ project(libtk205)
 include(CTest)
 set(JSON_BuildTests OFF CACHE INTERNAL "")
 
-# include_directories adds locations to the -I command line
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/btwxt/include/btwxt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/json/single_include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/vendor/json/include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../schema-205/build/include)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../schema-205/schema205/src)
-
 file(GLOB RS_schemas "${PROJECT_SOURCE_DIR}/../schema-205/schema-source/*.schema.yaml")
 file(GLOB base_classes
         "${PROJECT_SOURCE_DIR}/../schema-205/schema205/src/*.h"
@@ -29,9 +21,6 @@ foreach(schema IN LISTS RS_schemas)
   endif()
 endforeach()
 
-list(APPEND lib_headers "${CMAKE_CURRENT_SOURCE_DIR}/include/typeinfo_205.h"
-                        "${CMAKE_CURRENT_SOURCE_DIR}/include/loadobject_205.h")
-
 # Runs if OUTPUT is missing, or if OUTPUT exists BUT file DEPENDencies have changed
 # If OUTPUT exists and DEPENDS files haven't changed, the command is not run (?)
 add_custom_command(OUTPUT ${rs_headers} ${rs_src} ${lib_headers} ${base_classes}
@@ -40,8 +29,7 @@ add_custom_command(OUTPUT ${rs_headers} ${rs_src} ${lib_headers} ${base_classes}
                   COMMENT "Generate libtk205 files from YAML schema"
                   WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/../schema-205")
 
-set (SOURCES "${lib_headers}"
-             "${rs_headers}"
+set (SOURCES "${rs_headers}"
              "${rs_src}"
              "${factory_headers}"
              "${factory_src}"
@@ -49,13 +37,12 @@ set (SOURCES "${lib_headers}"
 
 add_library(libtk205 ${SOURCES})
 
-# add_custom_target(update_lib_repo ALL
-#                   COMMAND ${CMAKE_COMMAND} "-DPROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR}" -P "${PROJECT_SOURCE_DIR}/cmake/update_lib_repo.cmake"
-#                   VERBATIM)
-# add_dependencies(update_lib_repo libtk205)
+target_include_directories(libtk205 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(libtk205 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../schema-205/build/include)
+target_include_directories(libtk205 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../schema-205/schema205/src)
 
 add_subdirectory(vendor)
-target_link_libraries(libtk205 PUBLIC courierr fmt)
+target_link_libraries(libtk205 PUBLIC btwxt nlohmann_json)
 
 if (BUILD_TK205_TESTING)
   add_compile_definitions(TEST205_INPUT_EXAMPLES_DIR="${TEST205_INPUT_EXAMPLES_DIR}")
