--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,44 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
     "MinSizeRel" "RelWithDebInfo")
 endif()
 
-option( BUILD_TK205_TESTING "Build libtk205 testing targets" ON )
+# Run libtk205 generator
 
-# Set up testing/coverage
-if (BUILD_TK205_TESTING)
-  set(TEST205_INPUT_EXAMPLES_DIR "${PROJECT_SOURCE_DIR}/schema-205") 
-  enable_testing()
-endif()
+file(GLOB RS_schemas "${PROJECT_SOURCE_DIR}/schema-205/schema-source/*.schema.yaml")
+
+foreach(schema IN LISTS RS_schemas)
+  string(REGEX REPLACE "${PROJECT_SOURCE_DIR}/schema-205/schema-source/(.*).schema.yaml" "\\1" schema_name "${schema}")
+  string(TOLOWER ${schema_name} schema_name)
+  list(APPEND rs_headers "${PROJECT_SOURCE_DIR}/schema-205/build/include/${schema_name}.h")
+  list(APPEND rs_src "${PROJECT_SOURCE_DIR}/schema-205/build/cpp/${schema_name}.cpp")
+  if (schema_name MATCHES "rs.*")
+    list(APPEND factory_headers "${PROJECT_SOURCE_DIR}/schema-205/build/include/${schema_name}_factory.h")
+    list(APPEND factory_src "${PROJECT_SOURCE_DIR}/schema-205/build/cpp/${schema_name}_factory.cpp")
+  endif()
+endforeach()
+
+execute_process(
+  COMMAND ${CMAKE_COMMAND} -DPROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR} -P "../cmake/get_lib_repo_local.cmake"
+)
+
+# Runs if OUTPUT is missing, or if OUTPUT exists BUT file DEPENDencies have changed
+# If OUTPUT exists and DEPENDS files haven't changed, the command is not run (?)
+add_custom_command(OUTPUT ${rs_headers} ${rs_src} ${factory_headers} ${factory_src}
+                   COMMAND poetry run doit cpp
+                   COMMAND ${CMAKE_COMMAND} -DPROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR} -P "../cmake/update_lib_repo_local.cmake"
+                   DEPENDS ${RS_schemas}
+                   COMMENT "Generate libtk205 files from YAML schema"
+                   WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/schema-205")
+
+add_custom_target(libtk205_generator ALL
+                  DEPENDS ${rs_headers} ${rs_src} ${factory_headers} ${factory_src})
+                  
+# option( BUILD_TK205_TESTING "Build libtk205 testing targets" ON )
+
+# # Set up testing/coverage
+# if (BUILD_TK205_TESTING)
+#   set(TEST205_INPUT_EXAMPLES_DIR "${PROJECT_SOURCE_DIR}/schema-205") 
+#   enable_testing()
+# endif()
 
 add_subdirectory(libtk205)
+
