--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -25,7 +25,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Build and test
         run: |
-          poetry run doit cbor yaml xlsx json templates test web
+          poetry run doit ignore libtk205  
+          poetry run doit
+          poetry run doit forget libtk205
           poetry run doit libtk205 --PAT "${{secrets.CI_PA_TOKEN}}"
           poetry run doit libtk205_tests
       - name: Export libtk205 source
