--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -31,5 +31,5 @@ jobs:
           poetry run doit
       - name: Export libtk205 source
         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.10'
-        run: cmake -DPA_TOKEN="${{secrets.CI_PA_TOKEN}}" -DPROJECT_SOURCE_DIR="${{github.workspace}}" -Drepo_name=libtk205 -Dupload_repo=https://github.com/open205/libtk205 -P "${{github.workspace}}/cmake/update_lib_repo_ci.cmake"
+        run: cmake -DPA_TOKEN="${{secrets.CI_PA_TOKEN}}" -DPROJECT_SOURCE_DIR="${{github.workspace}}" -Drepo_name=libtk205 -Dupload_repo=github.com/open205/libtk205 -P "${{github.workspace}}/cmake/update_lib_repo_ci.cmake"
 
